# pycounts_cmwiebe24

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_cmwiebe24/: datasets.py  pycounts_cmwiebe24.py
src/pycounts_cmwiebe24/data/: flatland.txt
tests/: test_pycounts_cmwiebe24.py
