[tool.poetry]
name = "pycounts_cmwiebe24"
version = "0.1.0"
description = "This is a simple package I am developing to teach myself about python package development."
authors = ["Caleb Wiebe"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
